# llm-wiki-github

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/superpowers/plans/: 2026-05-08-llm-wiki-phase1.md
docs/superpowers/specs/: 2026-05-07-llm-wiki-design.md
llm_wiki/: compile.py
raw/: manifest.csv  vector-databases.md
scripts/: compile.py
spec/: llm-wiki-spec-v4.md
tests/: conftest.py  test_apply.py  test_compile.py  test_context.py  test_llm.py  test_parse.py  test_validate.py
wiki/: index.md
